[setup] - sets up Games and Mainbar component

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -2,3 +2,14 @@
   background-color: blue;
 }
 
+.mainbar {
+  background: pink;
+}
+
+.games {
+  background: purple;
+}
+
+table {
+  border: 1px solid gray;
+}
