[style] - styles response paper component in gamesSandbox

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -16,13 +16,16 @@ td {
     border: 1px solid gray;
 }
 
-.games-response {
-    width: 720px;
-    height: 355px;
-    display: flex;
-    overflow: scroll;
-    margin: 24px 279px;
+p {
+  overflow: scroll;
 }
+// .games-response {
+//     width: 720px;
+//     height: 355px;
+//     display: flexbox;
+//     overflow: scroll;
+//     margin: 24px 279px;
+// }
 
 .games-response-hidden {
   display: hidden
