[style] - adds consistent classNames to Genre components

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -117,6 +117,13 @@ text-align: center;
   height: 509px;
 }
 
+.genres-response-inside {
+  background: transparent;
+  overflow: scroll;
+  width: 740px;
+  height: 509px;
+}
+
 
 .games-response-hidden {
   display: hidden;
