[fix] - fixes genresResponse className inside GenresSandbox

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -104,9 +104,21 @@ text-align: center;
   height: 540px;
 }
 
+.genres-response {
+  width: 770px;
+  height: 540px;
+}
+
 .games-response-hidden {  
   width: 770px;
   height: 540px;
+  display: hidden;
+}
+
+.genres-response-hidden {
+  width: 770px;
+  height: 540px;
+  display: hidden;
 }
 
 /* Response inside */
@@ -125,6 +137,3 @@ text-align: center;
 }
 
 
-.games-response-hidden {
-  display: hidden;
-}
